@@ -290,8 +290,6 @@ sub _membersToZentyal
     my $sambaMod = $self->_sambaMod();
     my $domainSID = $sambaMod->ldb()->domainSID();
     my $domainUsersSID = "$domainSID-513";
-    my $domainAdminsSID = "$domainSID-512";
-    my $domainAdminSID = "$domainSID-500";
 
     if ($domainUsersSID eq $self->sid()) {
         # Domain Users group is handled automatically by Samba, no need to sync the members
@@ -303,59 +301,53 @@ sub _membersToZentyal
     my $sambaMembersList = $self->members();
     my $zentyalMembersList = $zentyalGroup->members();
 
-    my %zentyalMembers = map { $_->canonicalName(1) => $_ } @{$zentyalMembersList};
+    my %zentyalMembers = map { $_->get('msdsObjectGUID') => $_ } @{$zentyalMembersList};
     my %sambaMembers;
     foreach my $sambaMember (@{$sambaMembersList}) {
         if ($sambaMember->isa('EBox::Samba::User') or
             $sambaMember->isa('EBox::Samba::Contact') or
             $sambaMember->isa('EBox::Samba::Group')) {
-            my $canonicalName = undef;
-            if ($domainAdminsSID eq $sambaMember->sid()) {
-                # TODO: We must stop moving this Samba group from the Users container to the legacy's Group OU in Zentyal.
-                # This is required so both canonical names match on Zentyal's OpenLDAP and Samba.
-                my $parent = EBox::Users::Group->defaultContainer();
-                $canonicalName = $parent->canonicalName(1) . '/' . $sambaMember->baseName();
-            } else {
-                $canonicalName = $sambaMember->canonicalName(1);
-            }
-            $sambaMembers{$canonicalName} = $sambaMember;
+            my $uniqueID = $sambaMember->objectGUID();
+            $sambaMembers{$uniqueID} = $sambaMember;
             next;
         }
         my $dn = $sambaMember->dn();
         EBox::error("Unexpected member type ($dn)");
     }
 
-    foreach my $memberCanonicalName (keys %zentyalMembers) {
-        unless (exists $sambaMembers{$memberCanonicalName}) {
-            EBox::info("Removing member '$memberCanonicalName' from Zentyal group '$gid'");
+    foreach my $memberUniqueID (keys %zentyalMembers) {
+        my $canonicalName = $zentyalMembers->{$memberUniqueID}->canonicalName(1);
+        unless (exists $sambaMembers{$memberUniqueID}) {
+            EBox::info("Removing member '$canonicalName' from Zentyal group '$gid'");
             try {
-                $zentyalGroup->removeMember($zentyalMembers{$memberCanonicalName}, 1);
+                $zentyalGroup->removeMember($zentyalMembers{$memberUniqueID}, 1);
             } otherwise {
                 my ($error) = @_;
-                EBox::error("Error removing member '$memberCanonicalName' from Zentyal group '$gid': $error");
+                EBox::error("Error removing member '$canonicalName' from Zentyal group '$gid': $error");
             };
          }
     }
 
-    foreach my $memberCanonicalName (keys %sambaMembers) {
-        unless (exists $zentyalMembers{$memberCanonicalName}) {
-            EBox::info("Adding member '$memberCanonicalName' to Zentyal group '$gid'");
-            my $zentyalMember = $sambaMod->ldapObjectFromLDBObject($sambaMembers{$memberCanonicalName});
+    foreach my $memberUniqueID (keys %sambaMembers) {
+        my $canonicalName = $sambaMembers->{$memberUniqueID}->canonicalName(1);
+        unless (exists $zentyalMembers{$memberUniqueID}) {
+            EBox::info("Adding member '$canonicalName' to Zentyal group '$gid'");
+            my $zentyalMember = $sambaMod->ldapObjectFromLDBObject($sambaMembers{$memberUniqueID});
             unless ($zentyalMember and $zentyalMember->exists()) {
-                if ($sambaMembers{$memberCanonicalName}->isa('EBox::Samba::Group')) {
+                if ($sambaMembers{$memberUniqueID}->isa('EBox::Samba::Group')) {
                     # The group is not yet syncronized, we force its sync now to retry...
-                    $sambaMembers{$memberCanonicalName}->addToZentyal();
-                    $zentyalMember = $sambaMod->ldapObjectFromLDBObject($sambaMembers{$memberCanonicalName});
+                    $sambaMembers{$memberUniqueID}->addToZentyal();
+                    $zentyalMember = $sambaMod->ldapObjectFromLDBObject($sambaMembers{$memberUniqueID});
                     unless ($zentyalMember and $zentyalMember->exists()) {
-                        EBox::error("Cannot add member '$memberCanonicalName' to group '$gid' because the member does not exist");
+                        EBox::error("Cannot add member '$canonicalName' to group '$gid' because the member does not exist");
                         next;
                     }
-                } elsif ($sambaMembers{$memberCanonicalName}->isa('EBox::Samba::Users') or
-                         $sambaMembers{$memberCanonicalName}->isa('EBox::Samba::Contact')) {
-                    EBox::error("Cannot add member '$memberCanonicalName' to Zentyal group '$gid' because the member does not exist");
+                } elsif ($sambaMembers{$memberUniqueID}->isa('EBox::Samba::Users') or
+                         $sambaMembers{$memberUniqueID}->isa('EBox::Samba::Contact')) {
+                    EBox::error("Cannot add member '$canonicalName' to Zentyal group '$gid' because the member does not exist");
                     next;
                 } else {
-                    EBox::error("Cannot add member '$memberCanonicalName' to Zentyal group '$gid' because it's not a known object.");
+                    EBox::error("Cannot add member '$canonicalName' to Zentyal group '$gid' because it's not a known object.");
                     next;
                 }
             }
@@ -363,7 +355,7 @@ sub _membersToZentyal
                 $zentyalGroup->addMember($zentyalMember, 1);
             } otherwise {
                 my ($error) = @_;
-                EBox::error("Error adding member '$memberCanonicalName' to Zentyal group '$gid': $error");
+                EBox::error("Error adding member '$canonicalName' to Zentyal group '$gid': $error");
             };
         }
     }
